Added database handler

--- a/core/.env
+++ b/core/.env
@@ -1,1 +1,1 @@
-DATA_FOLDER_PATH=/Users/amanmishra/Desktop/aman/SnowflakePy/data
+DATA_FOLDER_PATH=C:\Users\aman.mishra\Desktop\aman\SnowflakePy\data
