Updated clustering logic

--- a/core/.env
+++ b/core/.env
@@ -1,4 +1,4 @@
 DATA_FOLDER_PATH=C:\Users\aman.mishra\Desktop\aman\SnowflakePy\data
 USER_NAME=
 DB_NAME=db1
-DEFAULT_CLUSTER_SIZE=5
+DEFAULT_CLUSTER_SIZE=500
